--- a/index.html
+++ b/index.html
@@ -10,40 +10,44 @@
 </head>
 
 <body>
-		
+        
     <div class="container">
-    	<h1 class="text-center head-h1">图书管理系统</h1>
-    	<table class="table my-table">
-    		<thead>
-    			<tr>
-    				<th>ID</th>
-    				<th>图书名称</th>
-    				<th>图书编号</th>
-    				<th>借书人</th>
-    				<th>联系方式</th>
-    				<th>备注</th>
-    			</tr>
-    		</thead>
-    		<tbody>
-    			<tr>
-    				<td><input type="checkbox">&nbsp;1</td>
-    				<td>《三国演义》</td>
-    				<td>78-809P</td>
-    				<td>王三</td>
-    				<td>1399863XXXX</td>
-    				<td>这个人很懒!</td>
-    			</tr>
-    			<tr>
-    				<td><input type="checkbox">&nbsp;2</td>
-    				<td>《三国演义》</td>
-    				<td>78-809P</td>
-    				<td>王三</td>
-    				<td>1399863XXXX</td>
-    				<td>这个人很懒!</td>
-    			</tr>
-    		</tbody>
-    		<tfoot></tfoot>
-    	</table>
+        <h1 class="text-center head-h1">图书管理系统</h1>
+        <table class="table my-table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>图书名称</th>
+                    <th>图书编号</th>
+                    <th>借书人</th>
+                    <th>联系方式</th>
+                    <th>备注</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <div class="text-left">
+                            <input type="checkbox" name="id"><span>1</span>
+                        </div>
+                    </td>
+                    <td>《三国演义》</td>
+                    <td>78-809P</td>
+                    <td>王三</td>
+                    <td>1399863XXXX</td>
+                    <td>这个人很懒!</td>
+                </tr>
+                <tr>
+                    <td><input type="checkbox"><span>1</span></td>
+                    <td>《三国演义》</td>
+                    <td>78-809P</td>
+                    <td>王三</td>
+                    <td>1399863XXXX</td>
+                    <td>这个人很懒!</td>
+                </tr>
+            </tbody>
+            <tfoot></tfoot>
+        </table>
     </div>
 </body>
 <script src="http://cdn.bootcss.com/jquery/2.1.1-rc2/jquery.min.js"></script>
