更新page，具体实现明天解决

--- a/index.html
+++ b/index.html
@@ -48,10 +48,19 @@
             </tbody>
             <tfoot></tfoot>
         </table>
+        <nav aria-label="..." class="text-center">
+            <ul class="pager ">
+                <li><a href="">Previous</a></li>
+                <li><a href="">1</a></li>
+                <li><a href="">2</a></li>
+                <li><a href="">3</a></li>
+                <li><a href="">4</a></li>
+                <li><a href="">5</a></li>
+                <li><a href="">Next</a></li>
+            </ul>
+        </nav>
     </div>
 </body>
 <script src="http://cdn.bootcss.com/jquery/2.1.1-rc2/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="./dist/js/my-project-name.min.js"></script>
-
 </html>
