--- a/index.html
+++ b/index.html
@@ -63,4 +63,5 @@
 </body>
 <script src="http://cdn.bootcss.com/jquery/2.1.1-rc2/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/index.js"></script>
 </html>
