--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-        
     <div class="container">
         <h1 class="text-center head-h1">图书管理系统</h1>
         <table class="table my-table">
@@ -38,7 +37,8 @@
                     <td>这个人很懒!</td>
                 </tr>
                 <tr>
-                    <td><input type="checkbox"><span>1</span></td>
+                    <td>
+                        <input type="checkbox"><span>1</span></td>
                     <td>《三国演义》</td>
                     <td>78-809P</td>
                     <td>王三</td>
@@ -57,6 +57,15 @@
                 <li><a href="">4</a></li>
                 <li><a href="">5</a></li>
                 <li><a href="">Next</a></li>
+                <span>每页</span>
+                <select name="" id="my-page">
+                    <option value="10">10</option>
+                    <option value="20">20</option>
+                    <option value="30">30</option>
+                    <option value="40">40</option>
+                    <option value="50">50</option>
+                </select>
+                <span>条</span>
             </ul>
         </nav>
     </div>
@@ -64,4 +73,5 @@
 <script src="http://cdn.bootcss.com/jquery/2.1.1-rc2/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/index.js"></script>
+
 </html>
