更新了添加文件的add.php文件,index.php文件用于显示文件,add.js用于异步处理

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <div class="text-left">
-                            <input type="checkbox" name="id"><span>1</span>
-                        </div>
-                    </td>
+                        <input type="checkbox"><span>1</span></td>
                     <td>《三国演义》</td>
                     <td>78-809P</td>
                     <td>王三</td>
@@ -38,7 +35,79 @@
                 </tr>
                 <tr>
                     <td>
-                        <input type="checkbox"><span>1</span></td>
+                        <input type="checkbox"><span>2</span></td>
+                    <td>《三国演义》</td>
+                    <td>78-809P</td>
+                    <td>王三</td>
+                    <td>1399863XXXX</td>
+                    <td>这个人很懒!</td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="checkbox"><span>3</span></td>
+                    <td>《三国演义》</td>
+                    <td>78-809P</td>
+                    <td>王三</td>
+                    <td>1399863XXXX</td>
+                    <td>这个人很懒!</td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="checkbox"><span>4</span></td>
+                    <td>《三国演义》</td>
+                    <td>78-809P</td>
+                    <td>王三</td>
+                    <td>1399863XXXX</td>
+                    <td>这个人很懒!</td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="checkbox"><span>5</span></td>
+                    <td>《三国演义》</td>
+                    <td>78-809P</td>
+                    <td>王三</td>
+                    <td>1399863XXXX</td>
+                    <td>这个人很懒!</td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="checkbox"><span>6</span></td>
+                    <td>《三国演义》</td>
+                    <td>78-809P</td>
+                    <td>王三</td>
+                    <td>1399863XXXX</td>
+                    <td>这个人很懒!</td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="checkbox"><span>7</span></td>
+                    <td>《三国演义》</td>
+                    <td>78-809P</td>
+                    <td>王三</td>
+                    <td>1399863XXXX</td>
+                    <td>这个人很懒!</td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="checkbox"><span>8</span></td>
+                    <td>《三国演义》</td>
+                    <td>78-809P</td>
+                    <td>王三</td>
+                    <td>1399863XXXX</td>
+                    <td>这个人很懒!</td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="checkbox"><span>9</span></td>
+                    <td>《三国演义》</td>
+                    <td>78-809P</td>
+                    <td>王三</td>
+                    <td>1399863XXXX</td>
+                    <td>这个人很懒!</td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="checkbox"><span>10</span></td>
                     <td>《三国演义》</td>
                     <td>78-809P</td>
                     <td>王三</td>
