--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <th>备注</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="list-book"><!-- 
                 <tr>
                     <td>
                         <input type="checkbox"><span>1</span></td>
@@ -113,7 +113,7 @@
                     <td>王三</td>
                     <td>1399863XXXX</td>
                     <td>这个人很懒!</td>
-                </tr>
+                </tr> -->
             </tbody>
             <tfoot></tfoot>
         </table>
