添加跳转至add.html功能

--- a/index.html
+++ b/index.html
@@ -27,21 +27,29 @@
             </tbody>
             <tfoot></tfoot>
         </table>
-        <nav aria-label="..." class="text-center">
-            <ul class="pager">
-                <li><a href="" id="Pre">Previous</a></li>
-                <li><a href="" id="Nex">Next</a></li>
-                <span>每页</span>
-                <select name="" id="my-page">
-                    <option value="10">10</option>
-                    <option value="20">20</option>
-                    <option value="30">30</option>
-                    <option value="40">40</option>
-                    <option value="50">50</option>
-                </select>
-                <span>条</span>
-                <span id="item-total"></span>
-            </ul>
+        <nav aria-label="..." class="text-center row">
+            <div class="col-md-3 col-ms-5 col-xs-2">
+                <ul class="pager">
+                    <li><a href="add.html">增加</a></li>
+                    <li><a href="add.html">删除</a></li>
+                </ul>
+            </div>
+            <div class="col-md-8 colms-8 col-xs-8 col-ms-offset-2 col-md-offset-1">
+                <ul class="pager">
+                    <li><a href="" id="Pre">Previous</a></li>
+                    <li><a href="" id="Nex">Next</a></li>
+                    <span>每页</span>
+                    <select name="" id="my-page">
+                        <option value="10">10</option>
+                        <option value="20">20</option>
+                        <option value="30">30</option>
+                        <option value="40">40</option>
+                        <option value="50">50</option>
+                    </select>
+                    <span>条</span>
+                    <span id="item-total"></span>
+                </ul>
+            </div>
         </nav>
     </div>
 </body>
