--- a/add.html
+++ b/add.html
@@ -31,7 +31,7 @@
             <div class="form-group"><label for="more">备注</label></div>
             <textarea name="more" id="more" cols="30" rows="10" class="form-control"></textarea>
             <button type="submit" class="btn btn-info my-button" id="my-sub">确认</button>
-            <button type="reset" class="btn btn-info my-button">取消</button>
+            <button type="reset" class="btn btn-info my-button" id="res">取消</button>
         </form>
     </div>
 </body>
