--- a/index.html
+++ b/index.html
@@ -28,17 +28,18 @@
             <tfoot></tfoot>
         </table>
         <nav aria-label="..." class="text-center row">
-            <div class="col-md-3 col-ms-5 col-xs-2">
+            <div class="col-md-3 col-ms-3 col-xs-3">
                 <ul class="pager">
                     <li><a href="add.html">增加</a></li>
-                    <li><a href="add.html">删除</a></li>
+                    <li><a href="">删除</a></li>
+                    <li><a href="">修改</a></li>
                 </ul>
             </div>
-            <div class="col-md-8 colms-8 col-xs-8 col-ms-offset-2 col-md-offset-1">
+            <div class="col-md-8 colms-8 col-xs-8 col-md-offset-1">
                 <ul class="pager">
                     <li><a href="" id="Pre">Previous</a></li>
                     <li><a href="" id="Nex">Next</a></li>
-                    <span>每页</span>
+                    <span>每页&nbsp;</span>
                     <select name="" id="my-page">
                         <option value="10">10</option>
                         <option value="20">20</option>
