增加删除功能

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <div class="col-md-3 col-ms-3 col-xs-3">
                 <ul class="pager">
                     <li><a href="add.html">增加</a></li>
-                    <li><a href="">删除</a></li>
-                    <li><a href="">修改</a></li>
+                    <li><a href="" id="del-data">删除</a></li>
+                    <li><a href="" id="change-data">修改</a></li>
                 </ul>
             </div>
             <div class="col-md-8 colms-8 col-xs-8 col-md-offset-1">
