--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <ul class="pager">
                     <li><a href="add.html">增加</a></li>
                     <li><a href="" id="del-data">删除</a></li>
-                    <li><a href="" id="change-data">修改</a></li>
+                    <li><a href="" id="select-all">全选</a></li>
                 </ul>
             </div>
             <div class="col-md-8 colms-8 col-xs-8 col-md-offset-1">
